--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <h1>Planetary Fact Sheet</h1>
+  <div class="title">
+    <h1>Planetary Fact Sheet</h1>
+  </div>
   <table id="planets">
     <tr>
       <th></th>
@@ -17,7 +19,7 @@
     </tr>
     <tr>
       <td>Images of ??</td>
-      <td><img src="images/planet_1.png" alt="?"></td>
+      <td><img src="images/desktop_dark.mp4" alt="?"></td>
       <td><img src="images/planet_2.png" alt="?"></td>
       <td><img src="images/planet_3.png" alt="?"></td>
       <td><img src="images/planet_4.png" alt="?"></td>
