--- a/index.html
+++ b/index.html
@@ -12,63 +12,63 @@
   <table id="planets">
     <tr>
       <th></th>
-      <th>Planet 1</th>
+      <th>Earth</th>
       <th>Planet 2</th>
       <th>Planet 3</th>
       <th>Planet 4</th>
     </tr>
     <tr>
-      <td>Images of ??</td>
-      <td><img src="images/desktop_dark.mp4" alt="?"></td>
-      <td><img src="images/planet_2.png" alt="?"></td>
-      <td><img src="images/planet_3.png" alt="?"></td>
-      <td><img src="images/planet_4.png" alt="?"></td>
+      <td>Images of Planets</td>
+      <td><img src="images/Earth.jpg" alt="Planet Earth" class="planet"></td>
+      <td><img src="images/planet_2.png" alt="?" class="planet"></td>
+      <td><img src="images/planet_3.png" alt="?" class="planet"></td>
+      <td><img src="images/planet_4.png" alt="?" class="planet"></td>
     </tr>
     <tr>
-      <td>Fact #1</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-    </tr>
-    <tr>
-      <td>Fact #2</td>
-      <td>???</td>
+      <td>Mass (1024kg)	</td>
+      <td>5.97</td>
       <td>???</td>
       <td>???</td>
       <td>???</td>
     </tr>
     <tr>
-      <td>Fact #3</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-    </tr>
-    <tr>
-      <td>Fact #4</td>
-      <td>???</td>
+      <td>Diameter (km)	</td>
+      <td>12,756</td>
       <td>???</td>
       <td>???</td>
       <td>???</td>
     </tr>
     <tr>
-      <td>Fact #5</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-    </tr>
-    <tr>
-      <td>Fact #6</td>
-      <td>???</td>
+      <td>Distance from Sun (106 km)	</td>
+      <td>149.6</td>
       <td>???</td>
       <td>???</td>
       <td>???</td>
     </tr>
     <tr>
-      <td>Fact #7</td>
+      <td>Rotation Period (hours)	</td>
+      <td>23.9</td>
       <td>???</td>
+      <td>???</td>
+      <td>???</td>
+    </tr>
+    <tr>
+      <td>Density (kg/m3)	</td>
+      <td>5514</td>
+      <td>???</td>
+      <td>???</td>
+      <td>???</td>
+    </tr>
+    <tr>
+      <td>Mean Temperature (C)	</td>
+      <td>15</td>
+      <td>???</td>
+      <td>???</td>
+      <td>???</td>
+    </tr>
+    <tr>
+      <td>Number Of Moons</td>
+      <td>1</td>
       <td>???</td>
       <td>???</td>
       <td>???</td>
