--- a/index.html
+++ b/index.html
@@ -11,67 +11,67 @@
   </div>
   <table id="planets">
     <tr>
-      <th></th>
+      <th>Name Of Planets</th>
       <th>Earth</th>
-      <th>Planet 2</th>
-      <th>Planet 3</th>
-      <th>Planet 4</th>
+      <th>Mars</th>
+      <th>Neptune</th>
+      <th>Saturn</th>
     </tr>
     <tr>
       <td>Images of Planets</td>
       <td><img src="images/Earth.jpg" alt="Planet Earth" class="planet"></td>
-      <td><img src="images/planet_2.png" alt="?" class="planet"></td>
-      <td><img src="images/planet_3.png" alt="?" class="planet"></td>
-      <td><img src="images/planet_4.png" alt="?" class="planet"></td>
+      <td><img src="images/Mars.jpg" alt="?" class="planet"></td>
+      <td><img src="images/Neptune.jpg" alt="?" class="planet"></td>
+      <td><img src="images/Saturn.jpg" alt="?" class="planet"></td>
     </tr>
     <tr>
       <td>Mass (1024kg)	</td>
       <td>5.97</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
+      <td>0.642</td>
+      <td>102</td>
+      <td>568</td>
     </tr>
     <tr>
       <td>Diameter (km)	</td>
       <td>12,756</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
+      <td>6792</td>
+      <td>49,528</td>
+      <td>120,536</td>
     </tr>
     <tr>
       <td>Distance from Sun (106 km)	</td>
       <td>149.6</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
+      <td>2280</td>
+      <td>4515.0</td>
+      <td>1432.0</td>
     </tr>
     <tr>
       <td>Rotation Period (hours)	</td>
       <td>23.9</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
+      <td>24.6</td>
+      <td>16.1</td>
+      <td>10.7</td>
     </tr>
     <tr>
       <td>Density (kg/m3)	</td>
       <td>5514</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
+      <td>3934</td>
+      <td>1638</td>
+      <td>687</td>
     </tr>
     <tr>
       <td>Mean Temperature (C)	</td>
       <td>15</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
+      <td>-65</td>
+      <td>-200</td>
+      <td>-140</td>
     </tr>
     <tr>
       <td>Number Of Moons</td>
       <td>1</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
+      <td>2</td>
+      <td>16</td>
+      <td>274</td>
     </tr>
   </table>
 </body>
